# shengji

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  release.sh  test-no-wasm.html  test-no-wasm.md
.github/workflows/: build-image.yml  ci-workflow.yaml  deploy.yaml  docker-arm64.yaml  docker.yaml
backend/: Cargo.toml  build.rs
backend/backend-types/: Cargo.toml  dict.zstd
backend/backend-types/src/: lib.rs  wasm_rpc.rs
backend/src/: main.rs  serving_types.rs  shengji_handler.rs  state_dump.rs  storage.rs  utils.rs  wasm_rpc_handler.rs
backend/static/: index.html  rules.html
build-image/: Dockerfile
core/: Cargo.toml
core/examples/: simulate_play.rs
core/src/: bidding.rs  deck.rs  game_state.rs  hands.rs  interactive.rs  lib.rs  message.rs  ordered_card.rs  player.rs  scoring.rs  settings.rs  trick.rs  types.rs
core/src/game_state/: draw_phase.rs  exchange_phase.rs  initialize_phase.rs  mod.rs  play_phase.rs
favicon/: README.md
frontend/: .eslintrc.js  .gitignore  .prettierrc  config-overrides.js  eslint.config.mjs  jest.config.js  jest.setup.js  package.json  tsconfig.json  tslint.json  webpack.config.js
frontend/custom_typings/: emoji-picker-react.d.ts
frontend/json-schema-bin/: Cargo.toml
frontend/json-schema-bin/src/: main.rs
frontend/shengji-wasm/: Cargo.toml
frontend/shengji-wasm/examples/: print_json_schema.rs
frontend/shengji-wasm/src/: lib.rs
frontend/src/: AppStateProvider.tsx  AutoPlayButton.tsx  AutodrawSpeedSelector.tsx  BeepButton.tsx  Beeper.tsx  BidArea.tsx  Card.tsx  Cards.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx  Confetti.tsx  Credits.tsx  DebugInfo.tsx  DivWithProps.tsx  Draw.tsx  ElementWithProps.tsx  EllipseLayout.tsx  EmojiButton.tsx  Errors.tsx  Exchange.tsx  Firework.tsx  FriendSelect.tsx  Friends.tsx  GameMode.tsx  GameStatisticsButton.tsx  GameStatisticsPane.tsx  Header.tsx  IconButton.tsx  Initialize.tsx  InlineCard.tsx  JoinRoom.tsx  Kicker.tsx  KittySizeSelector.tsx  LabeledPlay.tsx  LandlordSelector.tsx  Layout.tsx  MovePlayerButton.tsx  NumDecksSelector.tsx  Play.tsx  (+44 more)
frontend/src/icons/: BarChart.tsx  CaretDown.tsx  CaretUp.tsx  Gear.tsx  PaperPlane.tsx
frontend/src/state/: GameStatistics.ts  Settings.ts
frontend/src/util/: array.ts  cachePrefill.ts  cardHelpers.test.ts  cardHelpers.ts  convertApiUnion.ts  mapObject.ts  mapValues.ts  object.ts  usePrevious.ts
frontend/static/: README.md  index.html  rules.html  style.css  timer-worker.js
mechanics/: Cargo.toml
mechanics/src/: bidding.rs  deck.rs  format_match.rs  hands.rs  lib.rs  multiset_iter.rs  ordered_card.rs  player.rs  scoring.rs  trick.rs  types.rs
src/: game.js  game_state.rs  hands.rs  index.html  interactive.rs  main.rs  rules.html  style.css  trick.rs  types.rs
storage/: Cargo.toml
storage/src/: hash_map_storage.rs  lib.rs  redis_storage.rs  storage.rs
storage/tests/: hash_map_storage_tests.rs  redis_storage_tests.rs
svgs/: README.md  package.json
wasm-rpc-impl/: Cargo.toml
wasm-rpc-impl/src/: lib.rs
