[package]
name = "shengji"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dynamic = []

[dependencies]
anyhow = "1.0"
futures = { version = "0.3" }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
