[package]
name = "shengji"
version = "0.1.4-alpha.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dynamic = ["slog-term"]

[dependencies]
anyhow = "1.0"
shengji-types = { path = "./backend-types" }
futures = { version = "0.3" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shengji-core = { path = "../core" }
slog = "2.5"
slog-async = "2.5"
slog-bunyan = "2.2"
slog-term = { version = "2.5", optional = true }
static_dir = "0.2"
storage = { path = "../storage" }
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "io-util"] }
warp = "0.3"
zstd = "0.5"

[build-dependencies]
vergen = "3"
