[package]
name = "shengji"
version = "0.1.5-beta.8"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
dynamic = ["slog-term", "tower-http"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["ws", "headers"] }
axum-macros = "0.3"
ctrlc = { version = "3", features = ["termination"] }
futures = { version = "0.3" }
http = "0.2"
include_dir = "0.7"
lazy_static = "1.4.0"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shengji-core = { path = "../core" }
shengji-mechanics = { path = "../mechanics" }
shengji-types = { path = "./backend-types" }
slog = "2.5"
slog-async = "2.5"
slog-bunyan = "2.2"
slog-term = { version = "2.5", optional = true }
storage = { path = "../storage" }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "io-util"] }
tower-http = { version = "0.3", features = ["fs"], optional = true }
zstd = "0.5"

[build-dependencies]
vergen = "3"
