[package]
name = "shengji-core"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lazy_static = "1.0"
permutohedron = "0.2.4"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
slog = "2.5"
smallvec = { version = "1.3.0", features = ["serde"] }
thiserror = "1.0"
url = "2.1"

[dev-dependencies]
rand_distr = "0.3.0"
serde_json = "1.0"
