[package]
name = "shengji-core"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
lazy_static = "1.0"
shengji-mechanics = { path = "../mechanics" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2"
schemars = "0.8"
thiserror = "1.0"
url = "2.1"

[dev-dependencies]
rand_distr = "0.4.3"
serde_json = "1.0"
