[package]
name = "shengji-mechanics"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"
lazy_static = "1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = { version = "2.5", features = ["nested-values"] }
slog_derive = "0.2"
schemars = "0.8"
thiserror = "1.0"
url = "2.1"
