[package]
name = "shengji-types"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
shengji-core = { path = "../../core" }
shengji-mechanics = { path = "../../mechanics" }
