[package]
name = "shengji-wasm"
description = "Shengji Core functionality exposed as a WASM file for the frontend"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
categories = ["wasm"]
edition = "2018"
repository = "https://github.com/rbtying/shengji"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.5"
# Need to include this otherwise getrandom doesn't work in wasm
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = { version = "0.1", features = ["serde"] }
ruzstd = "0.4"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
shengji-mechanics = { path = "../../mechanics" }
shengji-types = { path = "../../backend/backend-types" }
wasm-bindgen = { version = "0.2.74" }
wasm-rpc-impl = { path = "../../wasm-rpc-impl" }
